snapshot release channel

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 org.gradle.jvmargs=-Xmx4096m
-net.labymod.labymod4.release-type=internal
+net.labymod.labymod4.release-type=snapshot
 net.labymod.labymod4.addon-annotation-processor-version=0.1.0
 net.labymod.labymod4.injection-processor-version=0.1.0
 net.labymod.labymod4.api-version=0.1.0
